# runbook-semantic-verifier

./: .gitignore  100_STEPS.md  Makefile  PLAN.md  README.md  pyproject.toml
benchmarks/: builtin.json  current_impact.json
docs/: action_semantics.md  artifact_evaluation.md  benchmark_contribution.md  benchmark_reproducibility.md  claims_evidence.md  configuration_profiles.md  diagnostic_examples.md  evidence_ledger.md  exporter_conformance.md  formal_exports.md  governance.md  mechanized_semantics.md  migration_guide.md  negative_results_limitations.md  onboarding_walkthrough.md  oracle_review_protocol.md  related_work.md  release_criteria.md  remediation_playbooks.md  responsible_claims.md  security_privacy.md  small_step_semantics.md  verification_glossary.md  weakest_preconditions.md
examples/: cache_flush_safe.json  cache_flush_unsafe.json  credential_rotation_runbook.json  object_storage_restore_safe.json  object_storage_restore_unsafe.json  queue_replay_safe.json  queue_replay_unsafe.json  safe_runbook.json  unsafe_runbook.json  unsafe_yaml_requires_pyyaml.yaml
reports/: benchmark_reproduction_manifest.json  builtin_benchmark.json  builtin_benchmark.md  builtin_benchmark_profile.md  credential_rotation_check.json  credential_rotation_check.md  current_impact.json  current_impact.md  current_impact_annotations.github.txt  current_impact_annotations.json  current_impact_annotations.md  current_impact_audit.json  current_impact_audit.junit.xml  current_impact_audit.md  current_impact_audit.sarif  current_impact_benchmark.md  current_impact_ci_gate.json  (+46 more)
(+76 files in other folders)
