[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "formal-runbook-verification"
version = "0.1.0"
description = "Prototype verifier for cloud incident runbooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Formal Runbook Verification Prototype" }]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
test = ["pytest>=7"]

[project.scripts]
frv = "runbook_verify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
